--- a/home.html
+++ b/home.html
@@ -16,6 +16,8 @@
     </div>
     <div class="center-container">
         <h1 class="NattyTVTitle">NattyTV</h1>
+        <a class="MyWatchlistText" href="watchlist.html">My Watchlist</a>
+        <a class="FindMoviesText" href="search.html">Find Movies</a>
     </div>
 </body>
 
